--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,5 @@ pythonenv*
 /clang/utils/analyzer/projects/*/RefScanBuildResults
 # automodapi puts generated documentation files here.
 /lldb/docs/python_api/
+
+obj-x86_64-linux-gnu/
